--- a/css/main.css
+++ b/css/main.css
@@ -5,23 +5,25 @@
   justify-content: center;
 }
 .header {
-  background-color: #ffffff;
+  /* -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px); */
   width: 100%;
   position: fixed;
   z-index: 999;
-  padding: 3rem;
+  padding: 2rem;
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
 }
 .header-with-box-shadow {
+  background-color: rgba(0, 130, 148, 0.4);
   box-shadow: rgba(229, 229, 229, 0.1) 0px 1px 1px 0px inset,
     rgba(214, 214, 222, 0.25) 0px 50px 100px -20px,
     rgba(183, 182, 182, 0.3) 0px 30px 60px -30px;
 }
 
 .container_header {
-  width: 70%;
+  width: 80%;
   display: flex;
   margin: auto;
   align-content: center;
@@ -50,7 +52,7 @@
 
 .header_nav-item a {
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--white-color);
   position: relative;
   margin-right: 20px;
   transition: color 0.3s ease;
@@ -68,8 +70,9 @@
 }
 
 .header_nav-item a:hover {
-  color: var(--primary-light-aquamarine);
-  font-weight: bold;
+  color: var(--white-color);
+  /* font-weight: bold; */
+  background-color: transparent;
 }
 .header_nav-item a:hover::before {
   width: 100%;
@@ -80,32 +83,25 @@
   font-size: 1.4rem;
   margin-left: auto;
 }
-.header_span-signin {
-  color: var(--button-color);
-  font-size: 1.4rem;
-  cursor: pointer;
-  background-color: transparent;
-}
-.header_span-signin:hover {
-  color: var(--primary-light-aquamarine);
-  background: transparent;
-}
+
 .header_button-signup {
   font-size: 1.4rem;
-  color: var(--primary-light-aquamarine);
-  border: 1px solid var(--primary-light-aquamarine);
+  color: var(--white-color);
+  border: 1px solid var(--white-color);
   background: linear-gradient(
     to right,
     var(--primary-light-aquamarine) 50%,
-    white 50%
+    rgba(255, 255, 255, 0) -50%
   );
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all 0.5s ease-out;
 }
+
 .header_button-signup:hover {
   border: transparent;
   background-position: left bottom;
+  background-color: transparent;
   color: rgb(254, 253, 253);
 }
 
@@ -126,172 +122,234 @@
   height: 0.3rem;
   background-color: var(--primary-light-aquamarine);
   transition: 0.4s;
-  border-radius: 2px;
+  border-radius: 0.2rem;
 }
 
 .hero_section_main {
   display: flex;
-  width: 70%;
-  margin: auto;
-  margin-top: 10rem;
+  /* width: 70%; */
   justify-content: space-between;
 }
-.hero_section .hero_content {
+.banner{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.40),rgba(0,0,0,0.40));
+  background-position: center;
+  background-size: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 41rem;
+  align-items: center;
+  align-content: center;
 }
-.hero_content h1 {
-  margin: 2rem 0 2rem 0;
-}
-.hero_content p {
-  max-width: 32rem;
-  text-align: left;
-}
-.hero_content .content_button {
-  margin-top: 2rem;
+
+.banner .content{
+  width: 100%;
+  color: white;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.banner .content h1{
+  margin-top: 8rem;
+  font-size: 8rem;
+  font-weight: 800;
+  line-height: 10rem;
+  -webkit-text-stroke: 0.2rem #ffffff;
+  -webkit-background-clip: text;
+          background-clip: text;
+  display: inline-block;
+  color: transparent;
+  text-align: center;
+}
+.banner button{
   width: 20rem;
-  justify-content: space-between;
+  padding: 1.5rem;
+  margin: 2rem 0.5rem;
+  text-align: center;
+  border-radius: 1rem;
+  color: rgb(255, 255, 255);
+  border: 0.1rem solid white;
+  font-size: 2rem;
+  cursor: pointer;
+  font-weight: 60rem;
+  background-color: transparent;
 }
-.content_button .button_play {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  border-color: var(--white-color);
-  box-shadow: rgba(140, 144, 150, 0.2) 1rem 1rem 2rem;
+.banner button:hover{
+  background: rgb(0, 192, 226);
+  transition: 0.5s;
 }
-.button_play:hover {
-  background-color: #f4f4f4;
+.banner button:hover{
+  color: white;
 }
-.content_button .button_play img {
-  width: 1.5rem;
-  height: 2rem;
-  margin: auto;
-}
-.hero_img {
-  position: relative;
-  width: 40rem;
-  height: auto;
-}
-.hero_img .hero_img_main {
-  width: 40rem;
-  height: auto;
-}
-.hero_img_courses {
+.banner video{
   position: absolute;
-  top: 5rem;
-  left: -3rem;
-  width: 10rem;
-  filter: drop-shadow(rgba(149, 157, 165, 0.2) 0px 10px 24px);
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
-.hero_img_schedules {
-  position: absolute;
-  bottom: 3rem;
-  left: -5rem;
-  width: 10rem;
-  filter: drop-shadow(rgba(149, 157, 165, 0.2) 0px 10px 24px);
-}
-.hero_img_students {
-  position: absolute;
-  bottom: 3rem;
-  right: 3rem;
-  width: 13rem;
-  filter: drop-shadow(rgba(149, 157, 165, 0.2) 0px 10px 24px);
+@media(min-aspect-ratio: 16/9){
+  .banner video{
+      width: 100%;
+      height: auto;
+  }
 }
 
-/* FETURES  */
+/* DISTINATIONS  */
 
-.fetures_container {
-  width: 70%;
+.distinations_container {
+  width: 80%;
   margin: auto;
   margin-top: 10rem;
 }
-.fetures_container_content {
+.distinations_container_content {
   max-width: 40rem;
 }
-.fetures_container_content p:first-child {
+.distinations_container_content p:first-child {
   letter-spacing: 1rem;
   font-weight: bold;
 }
-.fetures_list {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10rem;
+
+
+.distination_item 
+{
+    padding-top:12rem ;
+    position:relative;
+    height: auto;
+    /* background: #fafafa; */
+    display: flex;
+    opacity: 0;
+    justify-content: space-between;
+    transform: translateY(50px);
+    transition: opacity 1s, transform 1s;
 }
-.fetures_list_item {
-  margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
-  width: 30rem;
-}
-.fetures_list_item h4 {
-  line-height: 5rem;
-}
-.fetures_list_item p {
-  max-width: 20rem;
-}
-.fetures_list_item img {
-  width: 15rem;
-  height: auto;
+.distination_item:nth-child(2n +1) 
+{
+    flex-direction: row-reverse;
 }
 
-/* COURSES  */
+.distination_item.show {
+    transform: translateY(0);
+    opacity: 1; /* Hiện .distination_item khi được cuộn đến */
+}
+.distination_item .imgBx
+{
+    position: sticky;
+    top: 8.5rem;
+    min-width: 50%;
+    height: 100vh;
+    display: flex;
+    justify-content: end;
+    align-items: start;
+    animation: fadeIn 0.5s ease forwards;
+}
+.distination_item:nth-child(2n)  .imgBx {
+  justify-content: start;
 
-.courses_section_container {
+}
+.distination_item .imgBx img{
+    max-width: 50rem;
+    border-radius: 2rem;
+}
+.distination_item:nth-child(2n) .imgBx img {
+    right: 10%;
+}
+
+.distination_item .line_list img {
+    width: 2.5rem;
+    height: auto;
+}
+.distination_item .content
+{
+   margin-bottom: 50rem;
+   padding: 0.3rem;
+}
+.content h2{
+  margin-top: -1rem;
+
+}
+.content .content_list{
+    position: relative;
+    margin-top: 2rem;
+}
+.content .content_list_text img {
+    position: absolute;
+    right: -2.5rem;
+    width: 2rem;
+    height: 2rem;
+}
+.content .content_list_text p:hover {
+  transition: all 0.7s ease-out;
+  color: var(--primary-light-aquamarine);
+}
+
+.distination_item:nth-child(2n) .content .content_list .content_list_text img {
+    position: absolute;
+    left: -2.5rem;
+}
+.content_list .content_list_text {
+    margin: 3rem 0 3rem 0;
+}
+.distination_item:nth-child(2n + 1) .content {
+    text-align: right;
+    margin-left: auto;
+}
+
+/* foods  */
+
+.foods_section_container {
   padding-top: 10rem;
-  width: 70%;
+  width: 80%;
   margin: auto;
 }
-.courses_container_content {
+.foods_container_content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.courses_container_content .content_left {
+.foods_container_content .content_left {
   max-width: 40rem;
 }
 
-.courses_container_content .content_left p:first-child {
+.foods_container_content .content_left p:first-child {
   letter-spacing: 1rem;
   font-weight: bold;
 }
 
-.courses_container_content .content_right {
+.foods_container_content .content_right {
   color: var(--primary-light-aquamarine);
   text-decoration: underline;
   font-size: 1.4rem;
 }
 
-.courses_list_card {
+.foods_list_card {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin-top: 10rem;
   gap: 2rem;
 }
 
-.courses_card_item {
+.foods_card_item {
   margin-top: 6rem;
   width: 100%;
   position: relative;
 }
-.courses_card_item .card_item_img {
+.foods_card_item .card_item_img {
   width: 100%;
-  border-radius: 0.8rem;
+  border-radius: 1.5rem;
   overflow: hidden;
 }
-.courses_card_item img {
+.foods_card_item img {
   width: 100%;
   overflow: hidden;
-  height: auto;
+  height: 30rem;
   transition: all 0.3s ease;
 }
-.courses_card_item img:hover {
+.foods_card_item img:hover {
   scale: 1.2;
 }
 .card_item_bottom {
@@ -441,6 +499,7 @@
 /* FOOTER  */
 footer {
   padding: 3rem;
+  background-color: rgb(0, 75, 105);
 }
 .footer_container {
   width: 70%;
