#3 update about us UI

--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,8 @@
   content: "";
   position: absolute;
   width: 0;
-  height: 2px;
-  bottom: 0;
+  height: 3px;
+  bottom: -0.3rem;
   left: 0;
   background-color: var(--primary-light-aquamarine);
   transition: width 0.3s ease;
@@ -176,10 +176,19 @@
   cursor: pointer;
   font-weight: 60rem;
   background-color: transparent;
+  background: linear-gradient(
+    to right,
+    var(--primary-light-aquamarine) 50%,
+    rgba(255, 255, 255, 0) -50%
+  );
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
 }
 .banner button:hover{
-  background: rgb(0, 192, 226);
-  transition: 0.5s;
+  border: transparent;
+  background-position: left bottom;
+  background-color: transparent;
 }
 .banner button:hover{
   color: white;
@@ -196,23 +205,107 @@
       height: auto;
   }
 }
+/* ABOUT US  */
+
+.reviews-section {
+  margin-top: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(62, 93, 98,0.1);
+  height: 40rem;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+}
+.reviews-section-container {
+  text-align: center;
+  padding: 20px;
+  height: 33rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.reviews-section .blockquote_icon img{
+  width: 3rem;
+  height: auto;
+}
+.review-text .info{
+  font-size: 0.9em;
+  color: #555;
+}
+.reviews-section-container h2 {
+  color: #3E5D62;
+}
+
+.review-text p,span {
+  color: #3E5D62;
+}
+
+.reviews-section-container blockquote {
+  font-style: italic;
+  color: #333;
+  margin: 20px 0;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.avatars {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 5px;
+  transition: border 0.1s;
+}
+
+.avatar.active,
+.avatar:hover {
+  border: 3px solid #009cb1;
+}
+
+.fade-out {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s, transform 0.5s;
+
+}
+
+.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
 
 /* DISTINATIONS  */
+.distinations_section {
+position: relative;
+  width: 100%;
+  background-color: rgba(237, 251, 253,0.4);
+  padding-top: 10rem;
+  
+}
 
 .distinations_container {
-  width: 80%;
+  padding: 0 10% 0 10%;
   margin: auto;
-  margin-top: 10rem;
 }
 .distinations_container_content {
-  max-width: 40rem;
+  max-width: 60rem;
 }
 .distinations_container_content p:first-child {
   letter-spacing: 1rem;
   font-weight: bold;
 }
-
-
 .distination_item 
 {
     padding-top:12rem ;
@@ -250,24 +343,25 @@
 
 }
 .distination_item .imgBx img{
-    max-width: 50rem;
+    width: 90%;
     border-radius: 2rem;
+    object-fit: cover;
 }
 .distination_item:nth-child(2n) .imgBx img {
     right: 10%;
 }
 
 .distination_item .line_list img {
-    width: 2.5rem;
+    width: 4.2rem;
     height: auto;
 }
 .distination_item .content
 {
-   margin-bottom: 50rem;
+   margin-bottom: 30rem;
    padding: 0.3rem;
 }
 .content h2{
-  margin-top: -1rem;
+  margin-top: -0.3rem;
 
 }
 .content .content_list{
@@ -276,19 +370,38 @@
 }
 .content .content_list_text img {
     position: absolute;
-    right: -2.5rem;
-    width: 2rem;
-    height: 2rem;
+    right: -3.9rem;
+    width: 3rem;
+    height: 3rem;
 }
-.content .content_list_text p:hover {
-  transition: all 0.7s ease-out;
+.distination_item:nth-child(2n) .content .content_list .content_list_text img {
+  position: absolute;
+  left: -3.9rem;
+}
+.content .content_list_text strong {
   color: var(--primary-light-aquamarine);
 }
-
-.distination_item:nth-child(2n) .content .content_list .content_list_text img {
-    position: absolute;
-    left: -2.5rem;
+.content .content_list_text p {
+  color: var(--black-color);
+  font-weight:400 ;
+  font-size: 2rem;
+  line-height: 3rem;
 }
+.content .content_list_text:hover {
+  transition: all 0.5s ease-out;
+  opacity: 0.6;
+  color: var(--primary-light-aquamarine);
+}
+.icon_airplane{
+  position: absolute;
+  top: 12rem;
+  right: -20rem;
+  z-index: -1;
+}
+.icon_airplane img {
+  width: 25rem;
+}
+
 .content_list .content_list_text {
     margin: 3rem 0 3rem 0;
 }
@@ -336,6 +449,7 @@
 .foods_card_item {
   margin-top: 5rem;
   width: 100%;
+  border-radius: 2rem;
   box-shadow: rgba(229, 229, 229, 0.1) 0px 1px 1px 0px inset,
   rgba(214, 214, 222, 0.25) 0px 50px 100px -20px,
   rgba(183, 182, 182, 0.3) 0px 30px 60px -30px;
@@ -414,6 +528,128 @@
   font-weight: bold;
   color: var(--primary-light-aquamarine);
 }
+
+/* RATE SECTION  */
+.rate-section {
+  margin-top: 20rem;
+  width: 100%;
+  height: auto;
+  background-image: url('../img/section_feedback.png');
+  /* background-repeat: no-repeat, repeat; */
+}
+.rate-section_content{
+padding: 6rem 0rem 6rem 0;
+ width: 80%;
+ margin: auto;
+ color: #ffffff;
+}
+.slider{
+  width: 80%;
+  max-width: 100vw;
+  height: 50rem;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.slider .list{
+  position: absolute;
+  width: max-content;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  transition: 1s;
+}
+
+.slider .buttons{
+  position: absolute;
+  bottom: 20%;
+  left: 5%;
+  width: 95%;
+  display: flex;
+  justify-content: end;
+}
+.slider .buttons button{
+margin: 5px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color:var(--primary-light-aquamarine);
+  color: #fff;
+  border: none;
+  font-family: monospace;
+  font-weight: bold;
+}
+
+#prev {
+background-color: rgba(255, 255, 255, 0.333);
+border: 1px solid var(--primary-light-aquamarine);
+}
+.slider .dots{
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translatex(-50%);
+  display: flex;
+}
+.slider .dots li{
+  list-style: none;
+  width: 15px;
+  height: 15px;
+  background-color: #ffffff;
+  margin: 10px;
+  border-radius: 20px;
+  transition: 0.6s;
+}
+.slider .dots li.active{
+  width: 32px;
+  background-color:var(--primary-light-aquamarine);
+}
+.card-items{
+  position: relative;
+  padding: 5rem;
+  width: 36rem;
+  margin: 2rem;
+  display: flex;
+  background-color: var(--white-color);
+  flex-direction: column;
+  border: 0.1rem solid black;
+  border-radius: 1rem;
+}
+.card-items.active{
+  border: 0.2rem solid var(--primary-light-aquamarine);
+}
+.card-top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.info {
+  margin-left:2rem;
+}
+  
+.start{
+  position: absolute;
+  right: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.start span {
+
+}
+.top-avt img{
+  width: 5rem;
+  height: auto;
+}
+.start img {
+  width: 2rem;
+  height: auto;
+}
+
+
+/* COUNTER */
 .counter {
   opacity: 0;
   transform: translateY(50px);
