--- a/css/main.css
+++ b/css/main.css
@@ -526,6 +526,7 @@ position: relative;
 
 .foods_container_content .content_left {
   max-width: 40rem;
+
 }
 
 .foods_container_content .content_left p:first-child {
@@ -634,27 +635,38 @@ position: relative;
   margin-top: 20rem;
   width: 100%;
   height: auto;
+  position: relative;
   background-image: url('../img/section_feedback.png');
   /* background-repeat: no-repeat, repeat; */
 }
+
 .rate-section_content{
 padding: 6rem 0rem 6rem 0;
  width: 80%;
  margin: auto;
  color: #ffffff;
+ display: flex;
+ justify-content: space-between;
+}
+.rate-section_content .buttons{
+  display: flex;
+  justify-content: flex-start;
+}
+.rate-section_content .content_left p{
+  color: var(--white-color);
+  opacity: 0.7;
 }
 .slider{
   width: 80%;
   max-width: 100vw;
   height: 50rem;
   margin: auto;
-  position: relative;
   overflow: hidden;
+  position: relative;
 }
 
 .slider .list{
   position: absolute;
-  width: max-content;
   height: 100%;
   left: 0;
   top: 0;
@@ -662,30 +674,30 @@ padding: 6rem 0rem 6rem 0;
   transition: 1s;
 }
 
-.slider .buttons{
-  position: absolute;
-  bottom: 20%;
-  left: 5%;
-  width: 95%;
-  display: flex;
-  justify-content: end;
-}
-.slider .buttons button{
-margin: 5px;
+
+.rate-section .buttons button{
+  margin: 5px;
   width: 50px;
   height: 50px;
-  border-radius: 50%;
-  background-color:var(--primary-light-aquamarine);
+  border-radius: 20%;
+  background-color:transparent;
   color: #fff;
   border: none;
   font-family: monospace;
   font-weight: bold;
+border: 2px solid var(--primary-light-aquamarine);
 }
 
-#prev {
+#prev,#next {
 background-color: rgba(255, 255, 255, 0.333);
-border: 1px solid var(--primary-light-aquamarine);
 }
+#prev img {
+  width: 1.2rem;
+}
+#next img {
+  width: 1.2rem;
+}
+
 .slider .dots{
   position: absolute;
   bottom: 20%;
@@ -711,13 +723,17 @@ border: 1px solid var(--primary-light-aquamarine);
   padding: 5rem;
   width: 36rem;
   margin: 2rem;
+  height: 23rem;
   display: flex;
   background-color: var(--white-color);
   flex-direction: column;
   border: 0.1rem solid black;
   border-radius: 1rem;
+  transition: all 1s ease;
 }
+
 .card-items.active{
+  height: 24rem;
   border: 0.2rem solid var(--primary-light-aquamarine);
 }
 .card-top {
@@ -736,9 +752,7 @@ border: 1px solid var(--primary-light-aquamarine);
   justify-content: center;
   align-items: center;
 }
-.start span {
 
-}
 .top-avt img{
   width: 5rem;
   height: auto;
@@ -748,95 +762,109 @@ border: 1px solid var(--primary-light-aquamarine);
   height: auto;
 }
 
-
-/* COUNTER */
-.counter {
-  opacity: 0;
-  transform: translateY(50px);
-  transition: opacity 1s, transform 1s;
-}
-
-.counter.show {
-  opacity: 1;
-  transform: translateY(0);
-}
-.text_coutdown {
+/* CONTACT  */
+#Contact{
+  width: 100%;
   display: flex;
-  justify-content: center;
-}
-.coutdown p {
-  font-size: 1.6rem;
-  color: var(--grey-color);
-}
-
-/* Slider  */
-
-.about_container {
+  align-items: center;
+  justify-content: space-evenly;
   position: relative;
-  width: 70%;
-  margin: auto;
-  height: 40rem;
+  overflow: hidden;
+}
+ 
+.container1{
+  display: flex;
+  margin: 5.625rem 0 0 0;
+  padding: 2rem;
+  border: 0.1rem solid #00b0c7;
+
+  border-radius: 0.625rem;
+  background: transparent;
+}
+.bg_travel {
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+  opacity: 0.1;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 10rem;
+}
+.container1 h2{
+  font-style: normal;
+  font-weight: 1600;
+  line-height: 130%;
+  letter-spacing: 0.005em;
+  background: linear-gradient(90.32deg, #008294 -9.24%, #25cfe6 99.72%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-align: center;
 }
 
-.about_container_text {
-  max-width: 42rem;
-  height: 30rem;
+.form_control input{
+  border: 0.063rem solid #008294;
+  border-radius: 1rem;
+  margin: 0.625rem 0.625rem;
+  padding: 0 1.25rem;
+  width: 93%;
+  height: 4rem;
+  outline: none;
+}
+
+.submit button{
+  border: 1px solid var(--primary-light-aquamarine);
+  background: linear-gradient(
+    to right,
+    var(--primary-light-aquamarine) 50%,
+    rgba(255, 255, 255, 0) -50%
+  );
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
+  color:var(--primary-light-aquamarine);
+  width: auto;
+  margin: 0.625rem 8.45rem;
+  padding: 0 1.188rem;
+  height: 4rem;
+  width: 15rem;
+}
+.submit button:hover{
+  opacity: 1;
+  cursor: pointer;
+  border: transparent;
+  background-position: left bottom;
+  background-color: transparent;
+  color: rgb(254, 253, 253);
+}
+
+/* EXPERIENCE SECTION */
+.experience_container {
+  width: 100%;
+  height: 54rem;
+  color: var(--white-color);
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  line-height: 3rem;
+  position: relative;
 }
-.about_container_text .img_union {
-  width: 3rem;
-  height: auto;
-}
-.about_container_text span {
-  font-size: 2.4rem;
-}
-.about_container_text .text {
-  margin: 3rem 0 4rem 0;
-}
-.buttons {
+.experience_container_content {
   position: absolute;
-  bottom: 10rem;
-  left: 0;
-  width: 95%;
-  display: flex;
-  justify-content: start;
+  z-index: 2;
 }
-.buttons button {
-  margin: 0.5rem;
-  width: 4.6rem;
-  height: 4.6rem;
-  border-radius: 50%;
-  color: #fff;
-  border: none;
-}
-.about_container_img {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.about_container_img img {
-  width: 50rem;
+.experience_container_content p {
+  color: var(--white-color);
+  margin-top: 2rem;
+  opacity: 0.7;
+  text-align: center;
+  font-family: 'Poppins-Light', sans-serif;
 }
 
-/* CTA  */
-.cta_section {
-  background-color: var(--light-aquamarine);
-  margin-top: 10rem;
-}
-.cta_section_container {
-  width: 70%;
-  margin: auto;
-  padding: 5rem 0 5rem 0;
-  line-height: 5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cta_section_container button {
-  height: 5rem;
+.experience_container img {
+  width: 100%;
+  z-index: 1;
 }
 
 /* Popup container */
@@ -911,6 +939,7 @@ border: 1px solid var(--primary-light-aquamarine);
 
 /* FOOTER  */
 footer {
+  margin-top: 10rem;
   padding: 3rem;
   background-color: rgb(0, 75, 105);
 }
@@ -931,8 +960,12 @@ footer {
   line-height: 4rem;
   color: var(--grey-color);
 }
+.menu_list li:hover {
+color: var(--white-color);
+}
 .menu_product h4 {
   font-size: 2rem;
+  color: var(--white-color);
 }
 
 .menu_list_icon img {
