--- a/css/main.css
+++ b/css/main.css
@@ -841,7 +841,7 @@ background-color: rgba(255, 255, 255, 0.333);
 
 /* EXPERIENCE SECTION */
 .experience_container {
-  width: 100%;
+  width: 100% ;
   height: 54rem;
   color: var(--white-color);
   display: flex;
@@ -861,10 +861,15 @@ background-color: rgba(255, 255, 255, 0.333);
   text-align: center;
   font-family: 'Poppins-Light', sans-serif;
 }
-
+.experience_container_wrapper {
+flex: 1;
+}
 .experience_container img {
   width: 100%;
   z-index: 1;
+}
+.containImg {
+  width: 100%;
 }
 
 /* Popup container */
@@ -962,6 +967,17 @@ footer {
 }
 .menu_list li:hover {
 color: var(--white-color);
+}
+.custom-list li {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+/* CSS khi thẻ li nằm trong viewport */
+.custom-list li.in-view {
+  opacity: 1;
+  transform: translateY(0);
 }
 .menu_product h4 {
   font-size: 2rem;
