--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,7 @@
   z-index: 999;
   padding: 2rem;
   top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
+ 
 }
 .header-with-box-shadow {
   background-color: rgba(0, 130, 148, 0.4);
@@ -25,6 +24,7 @@
   display: flex;
   margin: auto;
   align-content: center;
+  position: relative;
 }
 
 .logo_img {
@@ -103,7 +103,10 @@
 }
 
 .hamburger-menu {
-  margin-top: 2rem;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(0,-50%);
   height: 5rem;
   background-color: #f1f1f1;
   padding: 1rem;
@@ -111,7 +114,6 @@
   cursor: pointer;
   border-radius: 1rem;
   z-index: 999;
-  margin-left: auto;
 }
 
 .bar {
@@ -123,10 +125,10 @@
 }
 
 .hero_section_main {
-  display: flex;
-  /* width: 70%; */
-  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
 }
+
 .banner{
   width: 100%;
   height: 100vh;
@@ -138,6 +140,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  overflow: hidden;
 }
 
 .banner .content{
@@ -149,7 +152,36 @@
   align-items: center;
   align-content: center;
 }
+.responsive-video {
+  position: absolute;
+  top: 0;
+   right: 0;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
 
+  object-fit: cover;
+}
+
+/* .video-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+} */
+@media(min-aspect-ratio: 16/9){
+  .responsive-video{
+      width: 100%;
+      height: 100vh;
+  }
+}
+@media(min-aspect-ratio: 9/16){
+  .responsive-video{
+      width: 100%;
+      height: 100vh;
+
+  }
+}
 .banner .content h1{
   margin-top: 8rem;
   font-size: 8rem;
@@ -191,21 +223,9 @@
 .banner button:hover{
   color: white;
 }
-.banner video{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-@media(min-aspect-ratio: 16/9){
-  .banner video{
-      width: 100%;
-      height: auto;
-  }
-}
+
 /* ABOUT US  */
 .reviews-section {
-  /* margin-top: 7rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -343,7 +363,15 @@ position: relative;
   margin: auto;
 }
 
+.distination_item .wrapper_container{
+  display: flex;
+  flex-direction: row-reverse;
+}
 
+.distination_item:nth-child(2n) .wrapper_container{
+  display: flex;
+  flex-direction: row;
+}
 
 .distinations_container_content {
   max-width: 60rem;
@@ -383,6 +411,7 @@ position: relative;
     justify-content: end;
     align-items: start;
     animation: fadeIn 0.5s ease forwards;
+    z-index: 999;
 }
 .distination_item:nth-child(2n)  .imgBx {
   justify-content: start;
@@ -408,36 +437,18 @@ position: relative;
   opacity: 0.5;
   right: -10rem;
 }
+
 .distination_item:nth-child(2n)  .imgBx .bg_blur{
   left: -10rem;
 
 }
-
-/* .distination_item .imgBx .circle_large img {
-  position: absolute;
-  z-index: 0;
-  width: 60rem;
-  height: 60rem;
-  top: 10rem;
-  object-fit: cover;
-  left: -25rem;
-  animation: spin 7s linear infinite;
-}
-
-@keyframes spin {
-  from {
-      transform: rotate(0deg);
-  }
-  to {
-      transform: rotate(360deg);
-  }
-} */
 
 .distination_item .line_list {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .distination_item .line_list .circle_main {
     width: 4.2rem;
     border-radius: 50%;
@@ -456,7 +467,6 @@ position: relative;
 }
 .content h2{
   margin-top: -0.3rem;
-
 }
 
 .content .content_list{
@@ -518,17 +528,20 @@ position: relative;
   font-size: 2rem;
   line-height: 3rem;
 }
+
 .content .content_list_text:hover {
   transition: all 0.5s ease-out;
   opacity: 0.8;
   color: var(--primary-light-aquamarine);
 }
+
 .icon_airplane{
   position: absolute;
   top: 12rem;
   right: -20rem;
   z-index: -1;
 }
+
 .icon_airplane img {
   width: 25rem;
 }
@@ -577,7 +590,7 @@ position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(22.5rem, 1fr));
   margin-top: 10rem;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .foods_card_item {
@@ -819,7 +832,7 @@ background-color: rgba(255, 255, 255, 0.333);
 .bg_travel {
   width: 100%;
   height: 70rem;
-  z-index: ;
+  z-index: -1;
   opacity: 0.1;
   position: absolute;
   top: 0;
@@ -978,7 +991,7 @@ background-color: rgba(255, 255, 255, 0.333);
 footer {
   margin-top: 10rem;
   padding: 3rem;
-  background-color: rgb(0, 75, 105);
+  background-color: var(--primary-light-aquamarine);
 }
 .footer_container {
   width: 70%;
@@ -993,12 +1006,12 @@ footer {
 .menu_list {
   margin-top: 1rem;
   list-style: none;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   line-height: 4rem;
-  color: var(--grey-color);
+  color: #ffffff;
 }
 .menu_list li:hover {
-color: var(--white-color);
+color: var(--black-color);
 }
 .custom-list li {
   opacity: 0;
