--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 /* // Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
   html {
-    font-size: 45%;
+    font-size: 40%;
   }
   /* HERO SECTION  */
   .container_header {
@@ -50,57 +50,151 @@
     flex-direction: column;
     justify-content: space-around;
   }
+  .hero_section_main .content h1 {
+    font-size: 6rem;
+  }
+  /* FOODS  */
+  
+.foods_list_card {
+  grid-template-columns: repeat(auto-fit, minmax(22.5rem, 1fr));
+  margin-top: 10rem;
+  gap: 1.2rem;
+}
 
 }
 
 @media (max-width: 576px) {
+  html {
+    padding: 0;
+  }
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
   /* HERO SECTION  */
   .header_nav-item a {
     font-size: 3rem;
   }
-  .courses_card_item:last-child {
-    display: block;
+
+  .hero_section_main .content h1 {
+    font-size: 5rem;
+    max-width: 80%;
   }
-  .hero_img {
+
+  /* ABOUT US  */
+  .review-image-container {
     display: none;
   }
-  .hero_content {
-    width: 100%;
+  /* DISTINATIONS  */
+  .distinations_container_content {
     text-align: center;
   }
-  .hero_content p {
-    max-width: 100%;
-    text-align: center;
+  .distinations_container_content h2 {
+    line-height: 3rem;
+    margin: 2rem 0 2rem 0rem;
   }
-  .hero_content .content_button {
-    width: 100%;
+  .distination_item {
+    flex-direction: column;
     justify-content: center;
   }
-  .button_play {
-    margin-left: 1rem;
-  }
-  /* FETURE  */
-  .fetures_list {
-    flex-direction: column;
-    align-items: center;
-  }
-  .fetures_list .fetures_list_item {
+  .distination_item .imgBx {
+    position: static;
+    top: 0rem;
     width: 100%;
-    align-items: center;
+    height: 100%;
+    margin-bottom: 3rem;
   }
-  .fetures_list_item p {
-    max-width: 100%;
-    text-align: center;
+  .distination_item .wrapper_container {
+    display: flex;
+    flex-direction: row;
   }
-  .about_container_img {
+  .distination_item .imgBx img {
+    width: 100%;
+  }
+  .distination_item .imgBx .bg_blur {
+    top: -1rem;
+    width: 3rem;
+    display: none;
+
+  }
+
+  .distination_item:nth-child(1) .imgBx .bg_blur {
     display: none;
   }
-  .buttons {
-    justify-content: end;
-  }
-  /* CTA  */
-  .cta_section_container {
+  .distination_item:nth-child(2n + 1) {
     flex-direction: column;
+  }
+
+  .custom-list li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+  }
+
+  .content_list_text .custom-list li {
+    padding-left: 20px;
+  }
+
+  .custom-list li::before {
+    left: 0;
+  }
+
+  .content .content_list_text img {
+    left: -3.9rem;
+  }
+
+  .distination_item:nth-child(2n + 1) .content {
+    text-align: left;
+  }
+
+  /* FOODS  */
+
+  .foods_list_card {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+
+  .foods_container_content .content_right {
+    display: none;
+  }
+  .foods_container_content .content_left {
+    text-align: center;
+    max-width: 100%;
+  }
+  .foods_container_content .content_left  h2{
+  margin: 2rem 0 2rem 0;
+  }
+  .foods_card_item .card_item_img img {
+    height: 35rem;
+  }
+
+  .card_item_content .decription{
+    max-width: 100%;  
+  }
+  .card_item_content .item_location strong {
+    max-width: 100%;  
+  }
+  
+  /* FEEDBACK  */
+  .rate-section_content {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .rate-section_content .content_left p {
+    margin-top: 3rem;
+  }
+
+  .rate-section_content .buttons {
+    display: none;
+  }
+
+  .maps {
+    display: none;
+  }
+  #Contact {
+    justify-content: center;
+    height: 60rem;
   }
 
   /* FOOTER  */
@@ -115,5 +209,9 @@
   }
   .menu_product {
     margin-top: 3rem;
+    display: none;
+  }
+  .menu_product:last-child {
+    display: block;
   }
 }
