--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,10 +66,11 @@
 
 @media (max-width: 576px) {
   html {
+    font-size: 50%;
     padding: 0;
   }
   h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
   }
 
