--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,29 @@
 /* // Large devices (desktops, 992px and up) */
+@media (max-width: 1024px) and (orientation: portrait) {
+  .popup_content{
+    flex-direction: column;
+  }
+  .popup_left {
+    border-radius: 2rem 2rem 0 0;
+  }
+  /* FOODS  */
+  .foods_list_card {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    margin-top: 10rem;
+    gap: 1.2rem;
+  }
+  .foods_card_item .card_item_img img {
+    height: 25rem;
+  }
+
+  .card_item_content .decription{
+    max-width: 100%;  
+  }
+  .card_item_content .item_location strong {
+    max-width: 100%;  
+  }
+}
+
 @media (max-width: 992px) {
   html {
     font-size: 40%;
@@ -10,11 +35,13 @@
     width: 100%;
   }
   .header {
-    height: 8rem;
+    height: 10rem;
     padding: 0;
   }
   .header .logo_img {
     margin-top: 2rem;
+    height: 5rem;
+    width: auto;
   }
   .header_nav {
     width: 100%;
@@ -59,10 +86,85 @@
 .foods_list_card {
   grid-template-columns: repeat(auto-fit, minmax(22.5rem, 1fr));
   margin-top: 10rem;
-  gap: 1.2rem;
+  gap: 2.2rem;
 }
 
+.popup_content{
+  flex-direction: column;
 }
+.popup_left {
+  border-radius: 2rem 2rem 0 0;
+}
+.close_btn {
+  color: var(--white-color);
+}
+
+.foods_card_item .card_item_img img {
+  height: 20rem;
+}
+
+.card_item_content .decription{
+  max-width: 100%;  
+}
+.card_item_content .item_location strong {
+  max-width: 100%;  
+}
+}
+
+@media (max-width: 768px) { 
+  
+  /* FOODS  */
+  
+.foods_list_card {
+  grid-template-columns: repeat(auto-fit, minmax(32.5rem, 1fr));
+  margin-top: 10rem;
+  gap: 2.2rem;
+}
+
+.popup_content{
+  flex-direction: column;
+}
+.popup_left {
+  border-radius: 2rem 2rem 0 0;
+}
+.close_btn {
+  color: var(--white-color);
+}
+
+.foods_card_item .card_item_img img {
+  height: 20rem;
+}
+
+.card_item_content .decription{
+  max-width: 100%;  
+}
+.card_item_content .item_location strong {
+  max-width: 100%;  
+}
+  /* CONTACT  */
+  .rate-section_content {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .rate-section_content .content_left p {
+    margin-top: 3rem;
+  }
+
+  .rate-section_content .buttons {
+    display: none;
+  }
+
+  .maps {
+    display: none;
+  }
+  #Contact {
+    justify-content: center;
+    height: 60rem;
+  }
+  
+ }
+
 
 @media (max-width: 576px) {
   html {
@@ -167,7 +269,7 @@
   margin: 2rem 0 2rem 0;
   }
   .foods_card_item .card_item_img img {
-    height: 35rem;
+    height: 30rem;
   }
 
   .card_item_content .decription{
@@ -178,26 +280,7 @@
   }
   
   /* FEEDBACK  */
-  .rate-section_content {
-    justify-content: center;
-    text-align: center;
-  }
-
-  .rate-section_content .content_left p {
-    margin-top: 3rem;
-  }
-
-  .rate-section_content .buttons {
-    display: none;
-  }
-
-  .maps {
-    display: none;
-  }
-  #Contact {
-    justify-content: center;
-    height: 60rem;
-  }
+ 
 
   /* FOOTER  */
   .footer_container {
@@ -217,3 +300,25 @@
     display: block;
   }
 }
+
+
+@media(min-aspect-ratio: 16/9){
+  .responsive-video{
+      width: 100%;
+      height: 100vh;
+  }
+  .popup_content{
+    flex-direction: row;
+  }
+}
+@media(min-aspect-ratio: 9/16){
+  .responsive-video{
+      width: 100%;
+      height: 100vh;
+  }
+  /* .popup_content{
+    flex-direction: column;
+  } */
+
+}
+
